[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mili_env"]

[project]
name = "mili_env"
dynamic = ["version", "dependencies"]
authors = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
maintainers = [{ name = "Paul Zeinaty", email = "zeinatypol@gmail.com" }]
description = "A Gymnasium RL Project"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["gymnasium", "pygame", "autonomous", "reinforcement", "learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[tool.hatch.version]
source = "vcs"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
fix = true
format.docstring-code-format = true
format.docstring-code-line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D100", "S311", "ERA001"]

per-file-ignores = { "**/examples/*" = [
  "ANN",
  "D",
  "INP001",
  "T201",
], "**/tests/**/*" = [
  "ANN",
  "D",
  "INP001",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
], "src/**/*.py" = [
    "PLR2004",
    "S311",
]}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
